grupiranje klasa, logo, loptica

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
+  <head lang="en">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -22,14 +24,14 @@
         <div class="ombre"></div>
       </div>
 
-      <div class="main1">
+      <div>
         <div class="input-container">
-          <input type="email" class="input_email" required />
+          <input type="email" required />
           <label for="Username" class="userName">Username</label>
         </div>
         <div class="input-container">
-          <input type="password" class="input_password" required />
-          <label for="password" class="password">Password</label>
+          <input type="password" required />
+          <label class="password">Password</label>
         </div>
         <div class="button">
           <input type="submit" value="Login" />
