--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <body>
     <div class="container">
       <div class="title1">
-        <h1>SofaScore Tennis</h1>
         <div class="logo">
           <div class="first"></div>
           <div class="lijevo"></div>
           <div class="sredina"></div>
           <div class="desno"></div>
+        </div>
+        <div class="titleContainer">
+          <h1>SofaScore Tennis</h1>
         </div>
       </div>
 
@@ -26,11 +28,11 @@
 
       <div>
         <div class="input-container">
-          <input type="email" required />
+          <input type="email" required placeholder=" " />
           <label for="Username" class="userName">Username</label>
         </div>
         <div class="input-container">
-          <input type="password" required />
+          <input type="password" required placeholder=" " />
           <label class="password">Password</label>
         </div>
         <div class="button">
