--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css"
+    />
+    <!-- <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    /> -->
   </head>
   <body>
     <div class="container">
@@ -28,12 +36,12 @@
 
       <div>
         <div class="input-container">
-          <input type="email" required placeholder=" " />
-          <label for="Username" class="userName">Username</label>
+          <input type="email" id="email" required placeholder=" " />
+          <label for="email" class="userName">Email</label>
         </div>
         <div class="input-container">
-          <input type="password" required placeholder=" " />
-          <label class="password">Password</label>
+          <input type="password" id="password" required placeholder=" " />
+          <label for="password" class="password">Password</label>
         </div>
         <div class="button">
           <input type="submit" value="Login" />
